<resources>
    <string name="app_name">Vikify</string>
    <string name="title_activity_nav_draw">NavDraw</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Sendname">Name your Video</string>
    <string name="title_name">Vikify</string>
    <string name="profile">Profile</string>
    <string name="facebook_app_id">568649503555762</string>
    <string name="fb_login_protocol_scheme">fb568649503555762</string>
    <string name="saved">Saved</string>
    <string name="signout">Signout</string>
    <string name="write_a_description_about_your_video">Write a description about your video</string>
    <string name="no_video_desc">No description for this video</string>
    <string name="title_activity_saved_videos">SavedVideos</string>
    <string name="is_this_video_a_question_you_would_like_answered">Is this video a question you would like answered?</string>
    <string name="enter_your_phone_number">+919999999999</string>
    <string name="upload_youtube_video">Upload a Youtube Video</string>
</resources>
