<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/navdraw_searchview"
                app:showAsAction="ifRoom|collapseActionView"
                app:actionViewClass="android.support.v7.widget.SearchView"
                tools:ignore="MenuTitle" />

            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/saved" />

            <item
                android:id="@+id/nav_goto_profile"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/profile" />

            <item
                android:id="@+id/sign_out"
                android:icon="@drawable/ic_logout"
                android:title="@string/signout"/>

            <item
                android:id="@+id/upload_youtube_videos"
                android:icon="@drawable/ic_upload"
                android:iconTint="@color/colorPrimary"
                android:title="@string/upload_youtube_video"/>
        </menu>
    </item>

</menu>
